--- a/_data/contacts.yml
+++ b/_data/contacts.yml
@@ -1,5 +1,6 @@
 - name: Coordination de transplantation (Mme Martin/Mme Goyon/Me Chabou)
-  tel: 01.49.81.23.54 ou 01.49.81.43.18 (secrétariat)
+  tel: 01.49.81.23.54 (infirmières)
+  tel2: 01.49.81.43.18 (secrétariat)
   email: coordinatrice.13hge@aphp.fr 
 
 - name: Consultation d’hépatologie
