--- a/_data/members.yml
+++ b/_data/members.yml
@@ -1,19 +1,19 @@
 - title: Coordination de transplantation
   members:
     - name: Elise Goyon
-      bio: Professeur en transplantation hépatique au CHU Henri Mondor de Créteil
+      bio: Infirmière coordinatrice au CHU Henri Mondor de Créteil
       photo: elise-goyon.jpg
 
     - name: Elisabeth Martin
-      bio: Professeur en transplantation hépatique au CHU Henri Mondor de Créteil
+      bio: Infirmière coordinatrice au CHU Henri Mondor de Créteil
       photo: profile-placeholder.png
 
     - name: Nadia Chabou
-      bio: Professeur en transplantation hépatique au CHU Henri Mondor de Créteil
+      bio: Infirmière coordinatrice au CHU Henri Mondor de Créteil
       photo: profile-placeholder.png
 
     - name: Norbert Ngongang
-      bio: Professeur en transplantation hépatique au CHU Henri Mondor de Créteil
+      bio: Technicien ABM et Database Manager au CHU Henri Mondor de Créteil
       photo: norbert-ngongang.jpg
 
 - title: Hépatologues
@@ -35,7 +35,7 @@
       photo: charlotte-costentin.jpg
 
     - name: Cyrille Feray
-      bio: Professeur en transplantation hépatique au CHU Henri Mondor de Créteil
+      bio: Hépatologue au CHU Henri Mondor de Créteil
       photo: cyrille-feray.jpg
 
     - name: Giuliana Amaddeo
@@ -61,7 +61,7 @@
       photo: profile-placeholder.png
 
     - name: Alexis Laurent
-      bio: Professeur en transplantation hépatique au CHU Henri Mondor de Créteil
+      bio: Chirurgien hépatique et transplanteur au CHU Henri Mondor de Créteil
       photo: alexis-laurent.jpg
 
     - name: Chady Salloum
@@ -93,3 +93,9 @@
     - name: Marianne Cojocaru
       bio: Professeur en transplantation hépatique au CHU Henri Mondor de Créteil
       photo: profile-placeholder.png
+
+- title: Équipe transversale
+  members:
+    - name: Florence Dupont
+      bio: Assistante sociale
+      photo: florence-dupont.jpg
