--- a/_data/members.yml
+++ b/_data/members.yml
@@ -6,7 +6,7 @@
 
     - name: Elisabeth Martin
       bio: Infirmière coordinatrice au CHU Henri Mondor de Créteil
-      photo: profile-placeholder.png
+      photo: elisabeth-martin.jpg
 
     - name: Nadia Chabou
       bio: Infirmière coordinatrice au CHU Henri Mondor de Créteil
