Minor fixes after meetup

--- a/_data/contacts.yml
+++ b/_data/contacts.yml
@@ -27,6 +27,6 @@
 - name: Diététicienne (Mme Goncalves)
   tel: 01.49.81.49.28
 
-- name: Addictologie (Dr Trabut/ Dr Stabush/Dr Zerdazi)
+- name: Addictologie (Dr Trabut/ Dr Stabusch/Dr Zerdazi)
   tel: 01.49.81.33.45
   fax: 01.49.81.32.60
