--- a/_data/members.yml
+++ b/_data/members.yml
@@ -99,3 +99,7 @@
     - name: Florence Dupont
       bio: Assistante sociale
       photo: florence-dupont.jpg
+
+    - name: Nathalie Goncalves
+      bio: diététicienne
+      photo: nathalie-goncalves.jpg
