Adds nutrions and social

--- a/_data/pages.yml
+++ b/_data/pages.yml
@@ -29,6 +29,12 @@
     - title: Parcours de soin à H. Mondor
       href: /parcours.html
 
+    - title: Nutrition et greffe
+      href: /nutrition.html
+
+    - title: Prise en charge sociale
+      href: /prise-en-charge.html
+
     - title: Questions fréquentes
       href: /faq.html
 
