Adds Mayo scores

--- a/_data/pages.yml
+++ b/_data/pages.yml
@@ -99,7 +99,7 @@
       href: /scores/score_clif-sofa.html
 
     - title: Score Mayo Clinic CBP
-      href: /scores/score_cbp.html
+      href: /scores/score_mayo_cbp.html
 
     - title: Score Mayo Clinic CSP
-      href: /scores/score_csp.html
+      href: /scores/score_mayo_csp.html
