--- a/_data/pages.yml
+++ b/_data/pages.yml
@@ -41,8 +41,8 @@
     - title: Livret thérapeutique
       href: /livret.pdf
 
-  #  - title: Outils
-  #    href: /tools.html
+    - title: Documents utiles
+      href: /documents.html
 
 - id: 5
   title: Les associations
