--- a/_data/pages.yml
+++ b/_data/pages.yml
@@ -81,6 +81,9 @@
     - title: Score de Child Pugh
       href: /scores/score_child.html
 
+    - title: Score CLIF-C ADs
+      href: /scores/score_clif-c.html
+
     - title: Score aFoetoProteine
       href: /scores/score_afp.html
 
