Adds photos & credits

--- a/_data/members.yml
+++ b/_data/members.yml
@@ -111,3 +111,7 @@
     - name: Frédérique Franco
       bio: Assistante de recherche clinique
       photo: profile-placeholder.png
+
+    - name: Secrétariat
+      bio: Marie Bidarra, Christine Correia, Edwige Pinho
+      photo: secretariat.jpg
